--- a/man/icewm-menu-xrandr.pod
+++ b/man/icewm-menu-xrandr.pod
@@ -22,13 +22,22 @@ binding of B<icewm>.
 
 =head1 OPTIONS
 
-B<icewm-menu-xrandr> does not support any options.
+=over
 
-=head1 ENVIRONMENT
+=item B<--max>
+
+Instead of using the preferred mode and refresh rate of each monitor
+(xrandr's C<--auto> option), identify and use the modes with the highest
+bandwidth usage (i.e. usually the ones with the highest resolution and
+refresh rate). This behaviour is also enabled by creating the file
+C<$HOME/.cache/xrandrmenu.max> which would also effect the monitor
+quick-switch menu.
+
+=back
 
 =head1 CAVEATS
 
-The quick-switch menu is only accessible when B<icewm-menu-xrandr> program
+The quick-switch menu becomes accessible when B<icewm-menu-xrandr> program
 is registered as special binding of type B<switchkey> in
 L<icewm-keys(5)> configuration.
 
