--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -466,12 +466,17 @@ including cut-/copy-/paste-operations.
 =head2 WINDOW LIST
 
 The window list window shows a list of all workspaces. For each
-workspace it shows the windows which are mapped on it. The bottom
-entry reads C<All Workspaces>. It holds the sticky windows. These
-windows are mapped in all workspaces.
+workspace it shows the window titles of the windows which are mapped
+on it. The bottom entry reads C<All Workspaces>. It holds the sticky
+windows. These windows are mapped in all workspaces.
 
-Click on any workspace to activate it.  Click on a window to focus
-it. Or navigate by arrow keys and press Enter.
+A single-click on a window entry selects it. Multiple windows can
+be selected by C<Shift+Pointer_Button1>. Then a right mouse click will
+popup the system menu for this selection. To close the selected windows,
+press C<Delete>. Press C<Shift+Delete> to forcefully kill them.
+
+Double-click on a workspace to activate it.  Double-click on a window
+to focus it.  Or navigate by arrow keys and press Enter.
 
 The window list window is normally hidden. To activate it, select
 the bottom window list menu entry, or press the C<KeySysWindowList>
