Change EWMH window state in icesh.

--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -14,7 +14,7 @@
 
 =head1 DESCRIPTION
 
-B<icesh> provides 89 commands to change or query a window's state,
+B<icesh> provides 90 commands to change or query a window's state,
 and to interact with the L<icewm(1)> window manager. Command arguments
 are called actions. Window actions operate on a selection of windows.
 B<icesh> has several options to select and filter windows.  Options and
@@ -124,8 +124,17 @@ inverted.
 =item B<-L>, B<-Layer> I<LAYER>
 
 Filters clients by I<GNOME window layer>, which can either be a layer
-name (see below) or a layer number.  If I<LAYER> starts with an
-exclamation mark then the filtering is inverted.
+name or a layer number. See EXPRESSIONS below. If I<LAYER> starts with
+an exclamation mark then the filtering is inverted.
+
+=item B<-N>, B<-Netstate> I<STATE>
+
+Filters clients by I<EWMH window state>. Clients which have at
+least an EWMH window state of I<STATE> are selected.  This state
+refers to details like B<minized> or B<maximized>. See EXPRESSIONS
+below. If I<STATE> starts with an exclamation mark then the filtering
+is inverted.  A question mark C<?> filters clients with any bit set
+in I<STATE>.
 
 =item B<-P>, B<-Property> I<PROP[=value]>
 
@@ -145,7 +154,7 @@ if I<ROLE> starts with an exclamation mark.
 
 Filters clients by I<GNOME window state>. Clients which have at least
 a state of I<STATE> are selected.  The window state refers to details
-like B<minized> or B<maximized> and is explained below.  If I<STATE>
+like B<minized> or B<maximized>. See EXPRESSIONS below.  If I<STATE>
 starts with an exclamation mark then the filtering is inverted.
 A question mark C<?> filters clients with any bit set in I<STATE>.
 
@@ -359,6 +368,16 @@ Set the window geometry to I<GEOMETRY>.
 =item B<getGeometry>
 
 Print the window geometry.
+
+=item B<netState> I<[STATE]>
+
+If I<STATE> is omitted then it shows the I<EWMH window state>.
+If I<STATE> starts with a C<+> then flags in I<STATE> are appended to
+the existing I<EWMH window state>.  If I<STATE> starts with a C<->
+then flags in I<STATE> are removed from the existing I<EWMH window
+state>.  If I<STATE> starts with a C<=> then the I<EWMH window state>
+is set to I<STATE>. See EXPRESSIONS below. A list of I<EWMH flags>
+can be found in the output of C<icesh symbols>.
 
 =item B<setState> I<MASK> I<STATE>
 
@@ -724,6 +743,29 @@ Named symbols for window and bit gravity (numeric range: 0-10):
     Menu                 (16)
     Minimize             (32)
     Maximize             (64)
+
+=item I<EWMH window state symbols>
+
+Named symbols of the domain I<EWMH state> (numeric range:
+0-8191):
+
+    ABOVE                 (1)
+    BELOW                 (2)
+    DEMANDS_ATTENTION     (4)
+    FOCUSED               (8)
+    FULLSCREEN            (16)
+    HIDDEN                (32)
+    MAXIMIZED_HORZ        (64)
+    MAXIMIZED_VERT        (128)
+    MODAL                 (256)
+    SHADED                (512)
+    SKIPPAGER             (1024)
+    SKIPTASKBAR           (2048)
+    STICKY                (4096)
+
+These symbols are used with the I<MASK> and I<STATE> arguments to the
+C<setState> and C<toggleState> actions. Some additional states include:
+Above, Below, Urgent and Fullscreen.
 
 =back
 
