--- a/AUTHORS
+++ b/AUTHORS
@@ -1,16 +1,5 @@
 icewm -- authors file.  2020-02-08
 
-<<<<<<< HEAD
-Author: Bert Gijsbers <gijsbers@science.uva.nl>
-Author: wisememo <46960734+wisememo@users.noreply.github.com>
-Author: Sarah Kriesch <ada.lovelace@gmx.de>
-Author: Franziska Weinberger <f.weinberger@gemino.de>
-Author: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>
-Author: Juan Sarria <juansarriam@gmail.com>
-Author: Patricia Pazos <pms.malaga@hermestrans.com>
-Author: openSUSE Weblate <weblate-noreply@opensuse.org>
-=======
->>>>>>> upstream/icewm-1-4-BRANCH
 Author: Brian Bidulock <bidulock@openss7.org>
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
 Author: David Medina <medipas@gmail.com>
@@ -26,74 +15,11 @@ Author: Stanislav Brabec <sbrabec@suse.cz>
 Author: Kimmo Kujansuu <mrkujansuu@gmail.com>
 Author: Eduard Bloch <blade@debian.org>
 Author: Artem Polishchuk <tim77@users.noreply.github.com>
-Author: Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com>
-Author: scootergrisen <scootergrisen@gmail.com>
-Author: Dingzhong Chen <wsxy162@gmail.com>
-Author: Code7R <Code7R@users.noreply.github.com>
-Author: Benny Siegert <bsiegert@gmail.com>
-Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
-Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
-Author: Freek de Kruijf <freek@opensuse.org>
-Author: Aleš Kastner <alkas@volny.cz>
-Author: David Medina <medipas@gmail.com>
-Author: Ferdinand Galko <galko.ferdinand@gmail.com>
-Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
-Author: YunSeok Choi <xein@naver.com>
-Author: varmanishant <nishant.varma@gmail.com>
-Author: Eduard Bloch <blade@debian.org>
-Author: jc sl <trcs@gmx.com>
-Author: Sir Mobus Gochfulshigan Dorphin Esquire XXIII <celestialtuba@gmail.com>
-Author: Yi-Jyun Pan <pan93412@gmail.com>
-Author: Marguerite Su <i@marguerite.su>
-Author: ldarby2 <42494548+ldarby2@users.noreply.github.com>
-Author: Nikolas Nyby <nikolas@gnu.org>
-Author: Matthew Wong <mawong@redhat.com>
-Author: Ad Soyad <kalemlik100@yandex.com>
-Author: Jiri Bohac <jbohac@suse.cz>
-Author: ddekany <ddekany@apache.org>
-Author: Robert Taisz <robert.taisz@emerald.hu>
-Author: Grace Yu <grace.yu@excel-gits.com>
-Author: Hwajin Kim <hwajin.kim@e4net.net>
-Author: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>
-Author: Anshul Panwar <caspian7pena@gmail.com>
-Author: Ewelina Michalowska <ewelina.michalowska@stgambit.com>
-Author: Martin Devenney <devenneymartin@gmail.com>
-Author: Nikita Maynagashev <maynagashev@palex.ru>
-Author: Christine Gabriel <christine@stoquart.com>
-Author: Emily Dong <Emily.Dong@excel-gits.com>
-Author: George Yacoub <george.yacoub@arabize.com>
-Author: Andriy Bandura <andriykopanytsia@gmail.com>
-Author: Davide Aiello <davidea@novilinguists.com>
-Author: G. Allen Morris III <gam3@gam3.net>
-Author: Ruta Reknere <ruta.reknere@nordtext.com>
-Author: zhengqiang130 <qzheng@suse.com>
-Author: anonymous <>
-Author: Jeff Woods <jwoods@build.com>
-Author: Eva van Rein <vistatec@globaltextware.nl>
-Author: Jeff Woods <klaatu@fnordco.com>
-Author: Wnereiz Z <wnereiz@eienteiland.org>
-Author: Nathan Follens <nthn@unseen.is>
-Author: Batuhan Osman Taşkaya <batuhanosmantaskaya@gmail.com>
-Author: Pro-pra <pro2_2000@mail.ru>
-Author: Michal Suchanek <msuchanek@suse.com>
-Author: Antoine Belvire <antoine.belvire@laposte.net>
-Author: Kate Shcher <wwwkkk30@yandex.ru>
-Author: Vojtech Zeisek <Vojtech.Zeisek@opensuse.org>
-Author: Arif Budiman <arifpedia@gmail.com>
-Author: Stanislav Brabec <sbrabec@suse.com>
-Author: Dmitry Semyonov <linulin@gmail.com>
-Author: Attila Kinali <attila@kinali.ch>
+Author: Alessio Adamo <alessio.adamo@gmail.com>
 Author: micrococo <micrococo@users.noreply.github.com>
 Author: jcsl <trcs@gmx.com>
-<<<<<<< HEAD
-Author: scootergrisen <scootergrisen@gmail.com>
-Author: Aleš Kastner <alkas@volny.cz>
-Author: Thomas Koller <tk120@protonmail.com>
-Author: David Medina <medipas@gmail.com>
-=======
 Author: Thomas Koller <tk120@protonmail.com>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
->>>>>>> upstream/icewm-1-4-BRANCH
 Author: Yi-Jyun Pan <pan93412@gmail.com>
 Author: Olga Smirnova <mistresssilvara@hotmail.com>
 Author: openSUSE Weblate <weblate-noreply@opensuse.org>
@@ -153,6 +79,7 @@ Author: Antoine Belvire <antoine.belvire@laposte.net>
 Author: Kate Shcher <wwwkkk30@yandex.ru>
 Author: Vojtech Zeisek <Vojtech.Zeisek@opensuse.org>
 Author: Arif Budiman <arifpedia@gmail.com>
+Author: Stanislav Brabec <sbrabec@suse.com>
 Author: Dmitry Semyonov <linulin@gmail.com>
 Author: Attila Kinali <attila@kinali.ch>
 Author: Benoît Monin <benoit.monin@gmx.fr>
